Move workers into the UI app - no reason to have them separate any more.

--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -116,7 +116,7 @@
                 <b>Server:</b> soclosevotetrackerdbserver.database.windows.net,1433<br/>
                 <b>Username:</b> SOCVRReadonly<br/>
                 <b>Password:</b> 30QITGxS69dpd6aPRlr5mb7pkMvtAv<br/>
-                <b>ADO.NET connection string:</b><br/>@ConfigurationManager.ConnectionStrings[DataContext.CONNECTION_STRING_NAME].ConnectionString<br/>
+                <b>ADO.NET connection string:</b><br/>@ConfigurationManager.ConnectionStrings[ReadWriteDataContext.READ_WRITE_CONNECTION_STRING_NAME].ConnectionString<br/>
             </div>
 
             <textarea id="txtSql" style="width: 100%; height: 600px">SELECT TOP 100
