--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -115,10 +115,7 @@
         <div role="tabpanel" class="tab-pane" id="RawSQL">
             <div style="padding: 15px;">
                 Yes! You can run raw SQL! <a href="/DatabaseDiagram.png">Click here</a> to see the database diagram <br/><br/>
-                <b>Server:</b> soclosevotetrackerdbserver.database.windows.net,1433<br/>
-                <b>Username:</b> SOCVRReadonly<br/>
-                <b>Password:</b> 30QITGxS69dpd6aPRlr5mb7pkMvtAv<br/>
-                <b>ADO.NET connection string:</b><br/>@ConfigurationManager.ConnectionStrings[ReadWriteDataContext.READ_WRITE_CONNECTION_STRING_NAME].ConnectionString<br/>
+                <b>ADO.NET connection string:</b><br/>@ConfigurationManager.ConnectionStrings[ReadOnlyDataContext.READ_ONLY_CONNECTION_STRING_NAME].ConnectionString<br/>
             </div>
 
             <textarea id="txtSql" style="width: 100%; height: 600px">SELECT TOP 100
@@ -375,7 +372,7 @@ ORDER BY COUNT(*) DESC</textarea>
         })
         .fail(function() {
             hideLoading();
-            renderTable($('#simpleTable'), [{ Error: 'Error occured while searching.'}]);
+            renderTable($('#dynamicTable'), [{ Error: 'Error occured while searching.'}]);
             $('#dynamicRefreshQuestions').hide();
             $('#dynamicRecordCount').hide();
         });
